Added signup feature

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>This is a basic HTML page.</p>
+    
+    <!-- Sign Up Button -->
+    <button onclick="alert('Sign Up clicked!')">Sign Up</button>
 </body>
 </html>
