--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
-<html>
-
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>My First Web Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+            background-color: #f4f4f4;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+
+        .signup-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .signup-btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This is a basic HTML page.</p>
-    
+    <p>This is a basic HTML page with a styled Sign Up button.</p>
+
     <!-- Sign Up Button -->
-    <button onclick="alert('Sign Up clicked!')">Sign Up</button>
+    <button class="signup-btn" onclick="alert('Sign Up clicked!')">Sign Up</button>
 </body>
 </html>
